finetune BERT - add AdamW weight decay discussion

--- a/Finetune_BERT_for_Sentiment_Classification.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification.ipynb
@@ -18,14 +18,30 @@
     "\n",
     "Note that different BERT model variants may have different maximum sequence lengths, so be sure to understand which `max_length` you are working with. Generally, `max_length = 512` is the default for BERT models. \n",
     "\n",
-    "Hyper-parameter choices in this notebook:\n",
-    "- Maximum Sequence Length (max_length) = 128\n",
-    "- Batch size (batch_size) = 64\n",
-    "- Optimizer: AdamW\n",
-    "- Learning rate (lr) = 2e-5\n",
+    "Hyperparameter choices in this notebook:\n",
+    "- Maximum Sequence Length (`max_length`) = 128\n",
+    "- Batch size (`batch_size`) = 64\n",
+    "- Optimizer: `AdamW`\n",
+    "- Learning rate (`lr`) = 2e-5\n",
+    "- Weight decay (`weight_decay`) = 0.01\n",
+    "- Number of epochs (`epochs`) = 5\n",
     "\n",
-    "Without any regularization, we train over 5 epochs (epoch $\\in$ {0, ..., 4}), and obtain these metrics:\n",
-    "- `epoch 4: Loss 0.0421, Train Acc 0.9866, Val Acc 0.8898, Test Acc: 0.8868`\n"
+    "## Optimization\n",
+    "\n",
+    "[`Adam`](https://pytorch.org/docs/stable/generated/torch.optim.Adam.html) and [`AdamW`](https://pytorch.org/docs/stable/generated/torch.optim.AdamW.html) algorithms share some similarities, but they also have important differences, mainly related to the handling of weight decay (L2 regularization) in training.\n",
+    "\n",
+    "- **`Adam`**: The original `Adam` optimizer includes weight decay as part of the parameter update step. Weight decay is added to the gradients of the model weights during the optimization process. This can lead to unintended behavior, such as incorrect weight decay being applied to some parameters.\n",
+    "- **`AdamW`**: `AdamW` is a variant of `Adam` that explicitly decouples weight decay from the optimization step. Weight decay is applied directly to the model weights after the gradients are computed, making it more straightforward and predictable. This decoupling of weight decay is considered a more mathematically principled approach and is less prone to issues like incorrect weight decay scaling.\n",
+    "\n",
+    "In practice, the choice between `Adam` and `AdamW` depends on the specific task and model architecture. When working with models like `BERT` or other transformers, `AdamW` is often preferred due to its more reliable handling of weight decay. However, for simpler models and tasks, `Adam` may still be suitable.\n",
+    "\n",
+    "Here, we use `AdamW` with the default value for `weight_decay`, which is 0.01.\n",
+    "\n",
+    "## Results\n",
+    "We obtain these metrics on the last epoch:\n",
+    "- `epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874`\n",
+    "\n",
+    "Looking at the full results (scroll down), we could perhaps \"early-stop\" after the 2nd epoch to minimize overfitting.\n"
    ]
   },
   {
@@ -60,7 +76,7 @@
    "metadata": {},
    "source": [
     "## Define device (CPU or GPU)\n",
-    "I am using a MacBook Pro with Apple M2 Max chip. Thus, I set device to \"mps\" for GPU. For other hardware architecture use:\n",
+    "This notebook is run on a MacBook Pro with Apple M2 Max chip. Thus, device is set to \"mps\" for GPU. For other hardware architecture use:\n",
     "\n",
     "```Python\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -370,7 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 50000/50000 [01:53<00:00, 441.82it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 50000/50000 [01:53<00:00, 439.80it/s]\n"
      ]
     },
     {
@@ -584,8 +600,7 @@
    "id": "8c8b6dfe-ff1c-45e9-9d2d-3f6b59651495",
    "metadata": {},
    "source": [
-    "## Define optimizer and loss function\n",
-    "AdamW has gained popularity in the NLP community, and many research papers and practical applications use it. It has been shown to work well with various transformer-based models, including BERT."
+    "## Define optimizer and loss function\n"
    ]
   },
   {
@@ -604,15 +619,16 @@
     }
    ],
    "source": [
+    "# Note: setting output_attentions and output_hidden_states to False can help with efficiency\n",
+    "# because it reduces the amount of additional information that the model needs to compute and\n",
+    "# store during forward passes. \n",
     "model = BertForSequenceClassification.from_pretrained(model_name, num_labels = 2, \n",
     "                                                      output_attentions = False, \n",
     "                                                      output_hidden_states = False)\n",
     "\n",
-    "\n",
-    "# Note: setting output_attentions and output_hidden_states to False can help with efficiency\n",
-    "# because it reduces the amount of additional information that the model needs to compute and\n",
-    "# store during forward passes. \n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5)\n",
+    "# https://pytorch.org/docs/stable/generated/torch.optim.AdamW.html\n",
+    "# weight_decay (float, optional) – weight decay coefficient (default: 1e-2)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5, weight_decay=1e-2)  # use default weight_decay\n",
     "criterion = nn.CrossEntropyLoss() # binary classification"
    ]
   },
@@ -721,70 +737,70 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██████████████████████▏                                                                                        | 1/5 [10:46<43:04, 646.09s/it]"
+      " 20%|██████████████████████▌                                                                                          | 1/5 [10:46<43:04, 646.14s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 0: Avg Loss 0.3268, Train Acc 0.8568, Val Acc 0.8854\n"
+      "epoch 1: Avg Loss 0.3238, Train Acc 0.8562, Val Acc 0.8794\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████████████████████████████████████████████▍                                                                  | 2/5 [21:30<32:15, 645.28s/it]"
+      " 40%|█████████████████████████████████████████████▏                                                                   | 2/5 [21:34<32:22, 647.61s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1: Avg Loss 0.2078, Train Acc 0.9165, Val Acc 0.8958\n"
+      "epoch 2: Avg Loss 0.2009, Train Acc 0.9195, Val Acc 0.8950\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████████████████████████████████████████████████████████████████▌                                            | 3/5 [32:18<21:33, 646.61s/it]"
+      " 60%|███████████████████████████████████████████████████████████████████▊                                             | 3/5 [32:16<21:29, 644.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2: Avg Loss 0.1274, Train Acc 0.9527, Val Acc 0.8970\n"
+      "epoch 3: Avg Loss 0.1201, Train Acc 0.9565, Val Acc 0.8962\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████████████████████████████████████████████████████████████████████████████████████▊                      | 4/5 [43:01<10:45, 645.12s/it]"
+      " 80%|██████████████████████████████████████████████████████████████████████████████████████████▍                      | 4/5 [42:57<10:43, 643.23s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3: Avg Loss 0.0718, Train Acc 0.9757, Val Acc 0.8874\n"
+      "epoch 4: Avg Loss 0.0660, Train Acc 0.9774, Val Acc 0.8966\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5/5 [53:48<00:00, 645.78s/it]"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5/5 [53:34<00:00, 642.86s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4: Avg Loss 0.0421, Train Acc 0.9866, Val Acc 0.8898\n"
+      "epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902\n"
      ]
     },
     {
@@ -831,7 +847,7 @@
     "            val_correct += (val_predicted == labels).type(torch.float).sum().item()\n",
     "    val_acc = val_correct / len(val_loader.dataset)\n",
     "    \n",
-    "    print(f'epoch {epoch}: Avg Loss {avg_train_loss:.4f}, Train Acc {train_acc:.4f}, Val Acc {val_acc:.4f}')          \n",
+    "    print(f'epoch {epoch + 1}: Avg Loss {avg_train_loss:.4f}, Train Acc {train_acc:.4f}, Val Acc {val_acc:.4f}')          \n",
     "        "
    ]
   },
@@ -845,7 +861,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4: Loss 0.0421, Train Acc 0.9866, Val Acc 0.8898, Test Acc: 0.8868\n"
+      "epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874\n"
      ]
     }
    ],
@@ -861,7 +877,7 @@
     "        test_correct += (test_predicted == labels).type(torch.float).sum().item()\n",
     "test_acc = test_correct / len(test_loader.dataset)\n",
     "\n",
-    "print(f'epoch {epoch}: Loss {avg_train_loss:.4f}, Train Acc {train_acc:.4f}, Val Acc {val_acc:.4f}, Test Acc: {test_acc:.4f}')          \n"
+    "print(f'epoch {epoch + 1}: Avg Loss {avg_train_loss:.4f}, Train Acc {train_acc:.4f}, Val Acc {val_acc:.4f}, Test Acc: {test_acc:.4f}')          \n"
    ]
   }
  ],
