--- a/Finetune_BERT_for_Sentiment_Classification.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification.ipynb
@@ -41,7 +41,7 @@
     "We obtain these metrics on the last epoch:\n",
     "- `epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874`\n",
     "\n",
-    "Looking at the full results (scroll down), we could perhaps \"early-stop\" after the 2nd epoch to minimize overfitting.\n"
+    "Looking at the full results (scroll down), we could perhaps \"early-stop\" after the 2nd epoch to minimize overfitting. Additional experimentation to explore other hyperparameter values is (always) recommended.\n"
    ]
   },
   {
