update intro markdown

--- a/Finetune_BERT_for_Sentiment_Classification.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This is a dataset for binary sentiment classification, where each example contains a movie review along with its positive or negative sentiment label.\n",
     "\n",
-    "We split the dataset into train (80%), validate (10%), and test (10%) sets. \n",
+    "We split the dataset into train (80%), validate (10%), and test (10%) sets. Exploring other split proportions is encouraged.\n",
     "\n",
     "## Finetuning BERT\n",
     "\n",
@@ -41,7 +41,7 @@
     "We obtain these metrics on the last epoch:\n",
     "- `epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874`\n",
     "\n",
-    "Looking at the full results (scroll down), we could perhaps \"early-stop\" after the 2nd epoch to minimize overfitting. Additional experimentation to explore other hyperparameter values is (always) recommended.\n"
+    "Looking at the full results (scroll down), we could perhaps \"early-stop\" after the 2nd epoch to minimize overfitting. Additional experimentation to find more optimal hyperparameter values is (always) recommended.\n"
    ]
   },
   {
