fresh run batch_size 32

--- a/Finetune_BERT_for_Sentiment_Classification.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification.ipynb
@@ -18,13 +18,19 @@
     "\n",
     "Note that different BERT model variants may have different maximum sequence lengths, so be sure to understand which `max_length` you are working with. Generally, `max_length = 512` is the default for BERT models. \n",
     "\n",
+    "**In this example we fine-tune ALL the parameters of BERT**. Notice in cell 14, we pass `model.parameters()` to the optimizer, where the `model.parameters()` call includes all the trainable parameters in the `BertForSequenceClassification` model, which includes the BERT base model along with the classification head specific to our task.\n",
+    "\n",
+    "For the purposes of fine-tuning, the authors of BERT recommend choosing from the following values ([from Appendix A.3 of the BERT paper](https://arxiv.org/pdf/1810.04805.pdf)):\n",
+    "\n",
+    "- Batch size: 16, 32\n",
+    "- Learning rate (Adam): 5e-5, 3e-5, 2e-5\n",
+    "- Number of epochs: 2, 3, 4\n",
+    "\n",
     "Hyperparameter choices in this notebook:\n",
-    "- Maximum Sequence Length (`max_length`) = 128\n",
-    "- Batch size (`batch_size`) = 64\n",
-    "- Optimizer: `AdamW`\n",
+    "- Batch size (`batch_size`) = 32\n",
     "- Learning rate (`lr`) = 2e-5\n",
-    "- Weight decay (`weight_decay`) = 0.01\n",
-    "- Number of epochs (`epochs`) = 5\n",
+    "- Number of epochs (`epochs`) = 4\n",
+    "- Maximum Sequence Length (`max_length`) = 128\n",
     "\n",
     "## Optimization\n",
     "\n",
@@ -38,10 +44,26 @@
     "Here, we use `AdamW` with the default value for `weight_decay`, which is 0.01.\n",
     "\n",
     "## Results\n",
-    "We obtain these metrics on the last epoch:\n",
-    "- `epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874`\n",
     "\n",
-    "Looking at the full results (scroll down), we could perhaps employ regularization techniques such as increasing BERT's `hidden_dropout_prob` and utilizing \"early-stoping\" to minimize overfitting. Additional experimentation to find more optimal hyperparameter values is (always) recommended.\n"
+    "```\n",
+    "epoch 1: Avg Loss 0.3201, Train Acc 0.8569, Val Acc 0.8920\n",
+    "epoch 2: Avg Loss 0.1974, Train Acc 0.9212, Val Acc 0.9004\n",
+    "epoch 3: Avg Loss 0.1115, Train Acc 0.9605, Val Acc 0.8974\n",
+    "epoch 4: Avg Loss 0.0598, Train Acc 0.9795, Val Acc 0.8894\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Test Acc: 0.8886\n",
+    "```\n",
+    "We observe overfitting with epochs 3 and 4. Thus, we would recommend stopping at epoch 2 (which is part of the recommended choices by the BERT authors). We in fact had trained using all of their recommended combos at `batch_size = 32`, and the ones in this notebook performed best. We did not investigate `batch_size = 16`, and we recommend exploring it. \n",
+    "\n",
+    "## Interesting reads\n",
+    "- [BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding](https://arxiv.org/pdf/1810.04805.pdf)\n",
+    "- [The Illustrated BERT, ELMo, and co. (How NLP Cracked Transfer Learning)(Jay Alammar)](https://jalammar.github.io/illustrated-bert/)\n",
+    "- [BERT Fine-Tuning Tutorial with PyTorch (Chris McCormick and Nick Ryan)](https://mccormickml.com/2019/07/22/BERT-fine-tuning/)\n",
+    "- [Fine-tune a pretrained model (Huggingface)](https://huggingface.co/docs/transformers/training)\n",
+    "- [The State of Transfer Learning in NLP (Sebastian Ruder)](https://www.ruder.io/state-of-transfer-learning-in-nlp/)\n",
+    "- [NLP-progress](https://nlpprogress.com/)"
    ]
   },
   {
@@ -209,7 +231,7 @@
     }
    ],
    "source": [
-    "# df = df.sample(n = 1000, random_state=42)\n",
+    "# df = df.sample(n = 1000, random_state=42)  # run on a small subset of data to test code\n",
     "df['sentiment'].value_counts()"
    ]
   },
@@ -330,29 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "10b4983b-3e2e-4904-b1a3-ba7f5a88b39e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Inspect the dropout rate applied to the hidden layers of BERT\n",
-    "bert_config = BertConfig.from_pretrained(model_name)\n",
-    "bert_config.hidden_dropout_prob"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e73b700d-a5cd-4047-b7bc-4c71ae95e489",
    "metadata": {},
@@ -364,7 +363,7 @@
     "tokenizer.encode(x, add_special_tokens=True, truncation=True, padding='max_length', max_length=128, return_attention_mask=True)\n",
     "```\n",
     "\n",
-    "- `add_special_tokens=True`: This parameter instructs the tokenizer to add special tokens to the encoded sequence. In the case of BERT, these special tokens typically include `[CLS]` (the classification token) at the beginning of the sequence and `[SEP]` (the separator token) at the end of the sequence. These special tokens are important for the model to understand the structure of the input and to perform tasks like classification. For example, `[CLS]` is used to represent the start of the input, and `[SEP]` is used to separate segments in a sequence.\n",
+    "- `add_special_tokens=True`: This parameter instructs the tokenizer to add special tokens to the encoded sequence. In the case of BERT, these special tokens typically include `[CLS]` (the classification token) at the beginning of the sequence, `[SEP]` (the separator token) at the end of the sequence, and padding tokens to ensure that the sequence length reaches the specified max_length. These special tokens are important for the model to understand the structure of the input and to perform tasks like classification. \n",
     "\n",
     "- `truncation=True`: This parameter indicates that if a sequence is longer than the specified `max_length`, it should be truncated to fit within the limit. Truncation is necessary to ensure that sequences don't exceed the model's token limit (e.g., 128 tokens in your case).\n",
     "\n",
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "730e2a72-16ef-4196-acbf-8b698b3da532",
    "metadata": {},
    "outputs": [
@@ -385,7 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 50000/50000 [01:53<00:00, 439.80it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████| 50000/50000 [01:52<00:00, 444.47it/s]\n"
      ]
     },
     {
@@ -484,7 +483,7 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...               1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9c339b80-5761-4208-8e51-ac229ebfa53d",
    "metadata": {},
    "outputs": [],
@@ -544,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "61a20a4a-2c97-4cc6-aa7d-6b6efe041ece",
    "metadata": {},
    "outputs": [],
@@ -571,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7f80dc15-ad6d-4214-8cc4-74455d741075",
    "metadata": {},
    "outputs": [],
@@ -583,12 +582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e1f41cd6-5f5f-48bf-9b27-0c8dbf55afa7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size)"
@@ -604,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "6ee4d1f6-f3ae-49fb-8ca7-d3da18e6353d",
    "metadata": {},
    "outputs": [
@@ -627,13 +626,13 @@
     "\n",
     "# https://pytorch.org/docs/stable/generated/torch.optim.AdamW.html\n",
     "# weight_decay (float, optional) – weight decay coefficient (default: 1e-2)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5, weight_decay=1e-2)  # use default weight_decay\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-5) \n",
     "criterion = nn.CrossEntropyLoss() # binary classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "5d59159f-cf83-4f3f-bde1-8f350a46970e",
    "metadata": {},
    "outputs": [
@@ -643,7 +642,7 @@
        "0.1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "5fc01554-7c1c-47ab-a2a1-b686711bcda9",
    "metadata": {},
    "outputs": [
@@ -716,7 +715,7 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "526fb850-1d0c-4581-84e0-011c7e21a17b",
    "metadata": {},
    "outputs": [
@@ -736,70 +735,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██████████████████████▌                                                                                          | 1/5 [10:46<43:04, 646.14s/it]"
+      " 25%|█████████████████████████▊                                                                             | 1/4 [11:19<33:59, 679.98s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1: Avg Loss 0.3238, Train Acc 0.8562, Val Acc 0.8794\n"
+      "epoch 1: Avg Loss 0.3201, Train Acc 0.8569, Val Acc 0.8920\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|█████████████████████████████████████████████▏                                                                   | 2/5 [21:34<32:22, 647.61s/it]"
+      " 50%|███████████████████████████████████████████████████▌                                                   | 2/4 [22:36<22:36, 678.20s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2: Avg Loss 0.2009, Train Acc 0.9195, Val Acc 0.8950\n"
+      "epoch 2: Avg Loss 0.1974, Train Acc 0.9212, Val Acc 0.9004\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|███████████████████████████████████████████████████████████████████▊                                             | 3/5 [32:16<21:29, 644.88s/it]"
+      " 75%|█████████████████████████████████████████████████████████████████████████████▎                         | 3/4 [33:45<11:13, 673.61s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3: Avg Loss 0.1201, Train Acc 0.9565, Val Acc 0.8962\n"
+      "epoch 3: Avg Loss 0.1115, Train Acc 0.9605, Val Acc 0.8974\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|██████████████████████████████████████████████████████████████████████████████████████████▍                      | 4/5 [42:57<10:43, 643.23s/it]"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [44:57<00:00, 674.46s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4: Avg Loss 0.0660, Train Acc 0.9774, Val Acc 0.8966\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5/5 [53:34<00:00, 642.86s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902\n"
+      "epoch 4: Avg Loss 0.0598, Train Acc 0.9795, Val Acc 0.8894\n"
      ]
     },
     {
@@ -811,7 +796,7 @@
     }
    ],
    "source": [
-    "epochs = 5\n",
+    "epochs = 4\n",
     "torch.manual_seed(12345)\n",
     "for epoch in tqdm(range(epochs)):\n",
     "    # train\n",
@@ -852,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "eb2b2ea4-aea7-40d6-a0ca-b9d6e65e0c25",
    "metadata": {},
    "outputs": [
@@ -860,7 +845,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 5: Avg Loss 0.0420, Train Acc 0.9864, Val Acc 0.8902, Test Acc: 0.8874\n"
+      "epoch 4: Avg Loss 0.0598, Train Acc 0.9795, Val Acc 0.8894, Test Acc: 0.8886\n"
      ]
     }
    ],
@@ -877,6 +862,26 @@
     "test_acc = test_correct / len(test_loader.dataset)\n",
     "\n",
     "print(f'epoch {epoch + 1}: Avg Loss {avg_train_loss:.4f}, Train Acc {train_acc:.4f}, Val Acc {val_acc:.4f}, Test Acc: {test_acc:.4f}')          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1bb0a16a-5500-471e-842b-f5c030c7a4aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of model parameters: 109483778\n"
+     ]
+    }
+   ],
+   "source": [
+    "# number of model parameters\n",
+    "num_params = sum(p.numel() for p in model.parameters())\n",
+    "print(f\"Number of model parameters: {num_params}\")"
    ]
   }
  ],
