include hyperparameter discussion

--- a/Finetune_BERT_for_Sentiment_Classification.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification.ipynb
@@ -30,7 +30,7 @@
     "- Batch size (`batch_size`) = 32\n",
     "- Learning rate (`lr`) = 2e-5\n",
     "- Number of epochs (`epochs`) = 4\n",
-    "- Maximum Sequence Length (`max_length`) = 128\n",
+    "- **Maximum Sequence Length (`max_length`) = 128**\n",
     "\n",
     "## Optimization\n",
     "\n",
@@ -41,7 +41,7 @@
     "\n",
     "In practice, the choice between `Adam` and `AdamW` depends on the specific task and model architecture. When working with models like `BERT` or other transformers, `AdamW` is often preferred due to its more reliable handling of weight decay. However, for simpler models and tasks, `Adam` may still be suitable.\n",
     "\n",
-    "Here, we use `AdamW` with the default value for `weight_decay`, which is 0.01.\n",
+    "Note that for `AdamW`, the default value for `weight_decay` is 0.01 (which is what we use in this notebook), while it is 0 for `Adam`. \n",
     "\n",
     "## Results\n",
     "\n",
@@ -55,12 +55,15 @@
     "```\n",
     "Test Acc: 0.8886\n",
     "```\n",
-    "We observe overfitting with epochs 3 and 4. Thus, we would recommend stopping at epoch 2 (which is part of the recommended choices by the BERT authors). We in fact had trained using all of their recommended combos at `batch_size = 32`, and the ones in this notebook performed best. We did not investigate `batch_size = 16`, and we recommend exploring it. \n",
+    "We observe overfitting with epochs 3 and 4. Thus, we would recommend stopping at epoch 2 (which is part of the recommended choices by the BERT authors). \n",
+    "\n",
+    "We had actually trained using all of their recommended combos for batch size and learning rate ([Appendix A.3 of the BERT paper](https://arxiv.org/pdf/1810.04805.pdf)), and there was very little change -- if any -- in the results. The only constant trend was the observed overfitting beyond epoch 2. The BERT authors in fact stated, \"We also observed that large data sets (e.g., 100k+ labeled training examples) were far less sensitive to hyperparameter choice than small data sets.\" It appears we have observed this type of behavior with our curated 50k dataset.\n",
     "\n",
     "## Interesting reads\n",
     "- [BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding](https://arxiv.org/pdf/1810.04805.pdf)\n",
     "- [The Illustrated BERT, ELMo, and co. (How NLP Cracked Transfer Learning)(Jay Alammar)](https://jalammar.github.io/illustrated-bert/)\n",
     "- [BERT Fine-Tuning Tutorial with PyTorch (Chris McCormick and Nick Ryan)](https://mccormickml.com/2019/07/22/BERT-fine-tuning/)\n",
+    "- [Fine-tuning a BERT model (Huggingface)](https://www.tensorflow.org/tfmodels/nlp/fine_tune_bert)\n",
     "- [Fine-tune a pretrained model (Huggingface)](https://huggingface.co/docs/transformers/training)\n",
     "- [The State of Transfer Learning in NLP (Sebastian Ruder)](https://www.ruder.io/state-of-transfer-learning-in-nlp/)\n",
     "- [NLP-progress](https://nlpprogress.com/)"
