fix typos / update  markdowns

--- a/Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb
@@ -368,9 +368,9 @@
     "\n",
     "- `add_special_tokens=True`: This parameter instructs the tokenizer to add special tokens to the encoded sequence. In the case of BERT, these special tokens typically include `[CLS]` (the classification token) at the beginning of the sequence, `[SEP]` (the separator token) at the end of the sequence, and padding tokens to ensure that the sequence length reaches the specified max_length. These special tokens are important for the model to understand the structure of the input and to perform tasks like classification. \n",
     "\n",
-    "- `truncation=True`: This parameter indicates that if a sequence is longer than the specified `max_length`, it should be truncated to fit within the limit. Truncation is necessary to ensure that sequences don't exceed the model's token limit (e.g., 128 tokens in your case).\n",
+    "- `truncation=True`: This parameter indicates that if a sequence is longer than the specified `max_length`, it should be truncated to fit within the limit. Truncation is necessary to ensure that sequences don't exceed the model's token limit (e.g., 128 tokens in our case).\n",
     "\n",
-    "- `padding='max_length'`: This parameter specifies how to handle padding of sequences. When set to `'max_length'`, the tokenizer will pad sequences to the specified `max_length`. Padding is necessary because BERT models expect input sequences of equal length. By padding shorter sequences with special padding tokens (`[PAD]`), you ensure that all sequences have the same length as specified by `max_length`.\n",
+    "- `padding='max_length'`: This parameter specifies how to handle padding of sequences. When set to `'max_length'`, the tokenizer will pad sequences to the specified `max_length`. Padding is necessary because BERT models expect input sequences of equal length. By padding shorter sequences with special padding tokens (`[PAD]`), we ensure that all sequences have the same length as specified by `max_length`.\n",
     "\n",
     "- `max_length=128`: This argument specifies the maximum length of the output sequence after encoding. If the input sequence is longer than this value and truncation is set to True, it will be truncated to fit within this length. If it's shorter, it will be padded to match this length.\n",
     "  \n",
@@ -568,7 +568,7 @@
    "metadata": {},
    "source": [
     "## Create DataLoader for efficient batch processing\n",
-    "When you create a DataLoader with shuffle=True, it shuffles the data once at the beginning when the DataLoader is created for that epoch. So, within a single epoch, the order of batches remains the same, but when you start a new epoch, the data is shuffled again, leading to a different order of examples for each epoch. This is a common practice in training deep learning models to ensure that the model doesn't memorize the order of examples and generalizes well across different batches and epochs."
+    "When a DataLoader is created with shuffle=True, it shuffles the data once at the beginning when the DataLoader is created for that epoch. So, within a single epoch, the order of batches remains the same, but when a new epoch is started, the data is shuffled again, leading to a different order of examples for each epoch. This is a common practice in training deep learning models to ensure that the model doesn't memorize the order of examples and generalizes well across different batches and epochs."
    ]
   },
   {
