--- a/Finetune_BERT_for_Sentiment_Classification_maxlength256.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification_maxlength256.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Review\n",
     "\n",
-    "Review the previous notebook (with `max_length = 128`) to understand the data and model setup.\n",
+    "Review the [Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb](Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb) with `max_length = 128`) to understand the data and model setup.\n",
     "\n",
     "Hyperparameter choices in this notebook:\n",
     "- Batch size (`batch_size`) = 32\n",
@@ -27,7 +27,7 @@
     "```\n",
     "Test Acc: 0.9226\n",
     "```\n",
-    "We observe overfitting with epochs 3 and 4. Thus, we would recommend stopping at epoch 2. Notice that doubling max length (`max_length` was 128 in [Finetune_Bert_for_Sentiment_Classification](Finetune_Bert_for_Sentiment_Classification.ipynb)) resulted in an increase in accuracy by about `2%`. However, training time has increased by about a factor of 2. "
+    "We observe overfitting with epochs 3 and 4. Thus, we would recommend stopping at epoch 2. Notice that doubling max length resulted in an increase in accuracy by about `2%`. However, training time has increased by about a factor of 2. "
    ]
   },
   {
