--- a/Finetune_BERT_for_Sentiment_Classification_maxlength256.ipynb
+++ b/Finetune_BERT_for_Sentiment_Classification_maxlength256.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Review\n",
     "\n",
-    "Review the [Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb](Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb) with `max_length = 128`) to understand the data and model setup.\n",
+    "Review [Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb](Finetune_BERT_for_Sentiment_Classification_maxlength128.ipynb) (with `max_length = 128`) to understand the data and the model setup.\n",
     "\n",
     "Hyperparameter choices in this notebook:\n",
     "- Batch size (`batch_size`) = 32\n",
